[package]
name = "ldk-bdk-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightning = { version = "0.0.112", features = ["max_level_trace"] }
lightning-block-sync = { version = "0.0.112", features = [ "rpc-client" ] }
lightning-invoice = "0.20.0"
lightning-net-tokio = { version = "0.0.112" }
lightning-persister = { version = "0.0.112" }
lightning-background-processor = { version = "0.0.112" }
lightning-rapid-gossip-sync = { version = "0.0.112" }

base64 = "0.13.0"
bitcoin = "0.29.2"
bitcoin-bech32 = "0.12"
bech32 = "0.8"
hex = "0.3"
futures = "0.3"
chrono = "0.4"
rand = "0.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "1.0.87" }
ureq = { version = "~2.2.0", features = ["json"] }
tokio = { version = "1.5", features = [ "io-util", "macros", "rt", "rt-multi-thread", "sync", "net", "time" ] }
log = "^0.4"
bdk = "0.24"
bdk-ldk = { git = "https://github.com/klochowicz/bdk-ldk", rev="c8ff54da8cb3627770e81433a553255870d4a98a" }
